Updated admin and database
Updated admin interface:

    New admin_login.html
    New admin_home.php

Updated users table:

    $sql = "CREATE TABLE IF NOT EXISTS users (
        user_id INT PRIMARY KEY AUTO_INCREMENT,
        email VARCHAR(50) NOT NULL UNIQUE,
        username VARCHAR(20) NOT NULL UNIQUE,
        password_hash VARCHAR(60) NOT NULL
    )";

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="login-signup">
             <a href="login.html">Login</a>
             <a href="signup.html">Sign Up</a>
-            <a href="admin.html">Admin</a>
+            <a href="admin_login.html">Admin</a>
         </div>
     </section>
 </body>
