--- a/admin_login.html
+++ b/admin_login.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="styles/login.css">
+    <!-- TODO: Add JavaSctipt validation -->
 </head>
 
 <body>
 
     <div class="login-container">
         <h2>Login</h2>
-        <form class="login-form" action="scripts/login.php" method="post">
+        <form class="login-form" action="admin/admin_login.php" method="post">
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required maxlength="20">
