Fixed titles of:
    index.html
    login.html
    signup.html
    admin_login.html
    admin_home.php

--- a/admin_login.html
+++ b/admin_login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Admin Login</title>
     <link rel="stylesheet" href="styles/login.css">
     <!-- TODO: Add JavaSctipt validation -->
 </head>
