--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Social Media</title>
+    <title>Social Media</title>
     <link rel="stylesheet" href="styles/home.css">
 </head>
 
 <body>
     <header>
-        <h1>Your Social Media</h1>
+        <h1>Social Media</h1>
     </header>
 
     <section>
-        <p>Welcome to Your Social Media! Connect with friends and share your moments.</p>
+        <p>Welcome to Social Media! Connect with friends and share your moments.</p>
 
         <div class="login-signup">
             <a href="login.html">Login</a>
