--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/signup.css">
     <script defer src="scripts/validate_signup.js"></script>
-    <title>Signup Page</title>
+    <title>Signup</title>
 </head>
 <body>
     <div class="container">
