--- a/admin_login.html
+++ b/admin_login.html
@@ -12,15 +12,19 @@
 <body>
 
     <div class="login-container">
-        <h2>Login</h2>
+        <h2>Admin Login</h2>
         <form class="login-form" action="admin/admin_login.php" method="post">
             <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required maxlength="20">
+                <label for="database_hostname">database_hostname:</label>
+                <input type="text" id="database_hostname" name="database_hostname" required maxlength="20">
             </div>
             <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required maxlength="100">
+                <label for="database_username">database_username:</label>
+                <input type="text" id="database_username" name="database_username" required maxlength="20">
+            </div>
+            <div class="form-group">
+                <label for="database_password">database_password:</label>
+                <input type="password" id="database_password" name="database_password" required maxlength="100">
             </div>
             <div class="form-group">
                 <input type="submit" value="Login">
