--- a/admin_login.html
+++ b/admin_login.html
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label for="database_password">database_password:</label>
-                <input type="password" id="database_password" name="database_password" required maxlength="100">
+                <input type="password" id="database_password" name="database_password" maxlength="100">
             </div>
             <div class="form-group">
                 <input type="submit" value="Login">
