Renaming variables for clarity.
'database_username' and 'database_password' with
'admin_username' and 'admin_password' for admin interface.

--- a/admin_login.html
+++ b/admin_login.html
@@ -19,12 +19,12 @@
                 <input type="text" id="database_hostname" name="database_hostname" required maxlength="20">
             </div>
             <div class="form-group">
-                <label for="database_username">database_username:</label>
-                <input type="text" id="database_username" name="database_username" required maxlength="20">
+                <label for="admin_username">admin_username:</label>
+                <input type="text" id="admin_username" name="admin_username" required maxlength="20">
             </div>
             <div class="form-group">
-                <label for="database_password">database_password:</label>
-                <input type="password" id="database_password" name="database_password" maxlength="100">
+                <label for="admin_password">admin_password:</label>
+                <input type="password" id="admin_password" name="admin_password" maxlength="100">
             </div>
             <div class="form-group">
                 <input type="submit" value="Login">
