--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Media</title>
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="./css/home.css">
 </head>
 
 <body>
@@ -17,9 +17,9 @@
         <p>Welcome to Social Media! Connect with friends and share your moments.</p>
 
         <div class="login-signup">
-            <a href="login.html">Login</a>
-            <a href="signup.html">Sign Up</a>
-            <a href="admin_login.html">Admin</a>
+            <a href="/login/">Login</a>
+            <a href="/signup/">Sign Up</a>
+            <a href="/admin/">Admin</a>
         </div>
     </section>
 </body>
