--- a/signup/index.html
+++ b/signup/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/signup.css">
-    <script defer src="scripts/validate_signup.js"></script>
+    <link rel="stylesheet" href="./css/signup.css">
+    <script defer src="./validate_signup.js"></script>
     <title>Signup</title>
 </head>
+
 <body>
-    <div class="container">
-        <form id="signupForm" action="scripts/signup.php" method="post" onsubmit="return validateForm()">
+
+    <div class="signup-container">
+        <h2>Signup</h2>
+        <form class="login-form" id="signupForm" action="./signup.php" method="post" onsubmit="return validateForm()">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required maxlength="50">
 
@@ -17,13 +21,15 @@
             <input type="text" id="username" name="username" required maxlength="20">
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required maxlength="100">
+            <input type="password" id="password" name="password" required maxlength="255">
 
             <label for="confirmPassword">Confirm Password:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required maxlength="100">
+            <input type="password" id="confirmPassword" name="confirmPassword" required maxlength="255">
 
             <button type="submit">Sign Up</button>
         </form>
     </div>
+
 </body>
+
 </html>
