Project name change
Added new whisper database schema and a script to create the 'users' table.

--- a/home/index.html
+++ b/home/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Media</title>
+    <title>Whisper - Home</title>
     <link rel="stylesheet" href="./css/home.css">
 </head>
-
 <body>
+
     <header>
-        <h1>Social Media</h1>
+        <h1>Whisper: A Privacy-Centric Social Media Platform.</h1>
     </header>
 
-    <section>
-        <p>Welcome to Social Media! Connect with friends and share your moments.</p>
+    <div class="buttons">
+        <a href="/login/" class="login-btn">Login</a>
+        <a href="/signup/" class="signup-btn">Sign Up</a>
+    </div>
 
-        <div class="login-signup">
-            <a href="/login/">Login</a>
-            <a href="/signup/">Sign Up</a>
-            <a href="/admin/">Admin</a>
-        </div>
-    </section>
 </body>
-
 </html>
