--- a/login/index.html
+++ b/login/index.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="./css/login.css">
+    <title>Log In</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
 
     <div class="login-container">
-        <h2>Login</h2>
-        <form class="login-form" action="./login.php" method="post">
+        <h2>Log In</h2>
+        <form class="login-form" action="login.php" method="post">
 
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required maxlength="20">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required maxlength="50">
 
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required maxlength="255">
 
-            <input type="submit" value="Login">
+            <input type="submit" value="LOG IN">
 
         </form>
     </div>
