--- a/signup/index.html
+++ b/signup/index.html
@@ -4,21 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/signup.css">
-    <script defer src="./validate_signup.js"></script>
-    <title>Signup</title>
+    <link rel="stylesheet" href="signup.css">
+    <script defer src="validate_signup.js"></script>
+    <title>Sign Up</title>
 </head>
 
 <body>
 
     <div class="signup-container">
-        <h2>Signup</h2>
-        <form class="login-form" id="signupForm" action="./signup.php" method="post" onsubmit="return validateForm()">
+        <h2>Sign Up</h2>
+        <form class="signup-form" id="signupForm" action="signup.php" method="post" onsubmit="return validateForm()">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required maxlength="50">
-
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required maxlength="20">
 
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required maxlength="255">
@@ -26,7 +23,7 @@
             <label for="confirmPassword">Confirm Password:</label>
             <input type="password" id="confirmPassword" name="confirmPassword" required maxlength="255">
 
-            <button type="submit">Sign Up</button>
+            <input type="submit" value="SIGN UP">
         </form>
     </div>
 
