--- a/home/index.html
+++ b/home/index.html
@@ -13,8 +13,8 @@
     </header>
 
     <div class="buttons">
-        <a href="/login/" class="login-btn">Login</a>
-        <a href="/signup/" class="signup-btn">Sign Up</a>
+        <a href="../login/" class="login-btn">Login</a>
+        <a href="../signup/" class="signup-btn">Sign Up</a>
     </div>
 
 </body>
