--- a/edit_profile/index.html
+++ b/edit_profile/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>File Upload</title>
+    <title>Profile Picture Cropper</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../edit_profile/style.css">
 </head>
+
 <body>
-    <h1>Upload a File</h1>
-    <form action="save_image.php" method="post" enctype="multipart/form-data">
-        <input type="file" name="fileToUpload" id="fileToUpload">
-        <input type="submit" value="Upload File" name="submit">
-    </form>
+
+    <div class="container">
+        <h1>Profile Picture Cropper</h1>
+        <div>
+            <input type="file" id="inputImage" accept="image/*">
+        </div>
+        <div id="cropper-container">
+            <img id="cropper-image" src="" alt="Image to crop">
+        </div>
+        <div>
+            <button id="cropButton">Crop Image</button>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
+    <script src="../edit_profile/script.js"> </script>
+
 </body>
+
 </html>
