--- a/login/index.html
+++ b/login/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <div class="login-container">
         <h2>Log In</h2>
-        <form class="login-form" action="login.php" method="post">
+        <form class="login-form" action="server.php" method="post">
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required maxlength="50">
