--- a/signup/index.html
+++ b/signup/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="style.css">
     <script defer src="validate_signup.js"></script>
     <title>Sign Up</title>
 </head>
@@ -13,7 +13,7 @@
 
     <div class="signup-container">
         <h2>Sign Up</h2>
-        <form class="signup-form" id="signupForm" action="signup.php" method="post" onsubmit="return validateForm()">
+        <form class="signup-form" id="signupForm" action="server.php" method="post" onsubmit="return validateForm()">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required maxlength="50">
 
