--- a/login/index.html
+++ b/login/index.html
@@ -12,10 +12,10 @@
 
     <div class="login-container">
         <h2>Log In</h2>
-        <form class="login-form" action="server.php" method="post">
+        <form class="login-form" action="../login/server.php" method="post">
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required maxlength="50">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required maxlength="16">
 
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required maxlength="255">
