--- a/signup/index.html
+++ b/signup/index.html
@@ -13,9 +13,9 @@
 
     <div class="signup-container">
         <h2>Sign Up</h2>
-        <form class="signup-form" id="signupForm" action="server.php" method="post" onsubmit="return validateForm()">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required maxlength="50">
+        <form class="signup-form" id="signupForm" action="../signup/server.php" method="post" onsubmit="return validateForm()">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required maxlength="50">
 
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required maxlength="255">
