--- a/login/index.html
+++ b/login/index.html
@@ -1,29 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log In</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Login</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        input[type="text"],
+        input[type="password"],
+        input[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+        input[type="submit"] {
+            background-color: #007bff;
+            color: #fff;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+        .error {
+            color: red;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
-
 <body>
+    <form id="login-form">
+        <h2>Login</h2>
+        <div id="error-message" class="error"></div>
+        <input type="text" id="login-username" name="login-username" placeholder="Username" required>
+        <input type="password" id="login-password" name="login-password" placeholder="Password" required>
+        <input type="submit" value="Login">
+    </form>
 
-    <div class="login-container">
-        <h2>Log In</h2>
-        <form class="login-form" action="../login/server.php" method="post">
+    <script>
+        document.getElementById('login-form').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the form from submitting
 
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required maxlength="16">
+            var username = document.getElementById('login-username').value;
+            var password = document.getElementById('login-password').value;
 
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required maxlength="255">
-
-            <input type="submit" value="LOG IN">
-        </form>
-    </div>
-
+            // Send the form data to the server using AJAX
+            var xhr = new XMLHttpRequest();
+            xhr.open('POST', '../login/server.php', true);
+            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+            xhr.onload = function() {
+                if (xhr.status === 200) {
+                    // Successful login, redirect to home page
+                    window.location.href = '../home/';
+                } else if (xhr.status === 401) {
+                    // Unauthorized, show error message
+                    document.getElementById('error-message').innerText = 'Invalid password';
+                } else if (xhr.status === 404) {
+                    // Username not found, show error message
+                    document.getElementById('error-message').innerText = 'Username is not registered. Please Sign Up instead';
+                }
+            };
+            xhr.send('login-username=' + encodeURIComponent(username) + '&login-password=' + encodeURIComponent(password));
+        });
+    </script>
 </body>
-
 </html>
