user page done without anon posts

--- a/whisper/maintenance/index.html
+++ b/whisper/maintenance/index.html
@@ -22,19 +22,30 @@
 
         h1 {
             color: #333;
+            margin-bottom: 20px;
         }
 
         p {
             color: #666;
+            margin-bottom: 10px;
+        }
+
+        .contact-link {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        .contact-link:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Sorry, we are experiencing technical difficulties</h1>
-        <p>and are unable to process your request at this time.</p>
+        <p>We apologize for the inconvenience, but we are currently unable to process your request.</p>
         <p>Please try again later.</p>
-        <p>If the issue persists, please contact the site administrator for assistance.</p>
+        <p>If the issue persists, please <a href="mailto:support@example.com" class="contact-link">contact us</a> for assistance.</p>
     </div>
 </body>
 </html>
